--- a/back-end/.env
+++ b/back-end/.env
@@ -1,6 +1,6 @@
 DB_USER=root
-DB_PASSWORD=token123
+DB_PASSWORD=R#9aT$7zP2qL6m!
 DB_HOST=localhost
 JWT_SECRET=secret
 DB_NAME=Token_Control
-DB_PORT=3307
+DB_PORT=3306
